--- a/store.html
+++ b/store.html
@@ -1153,8 +1153,8 @@
                     </p>
                     <div class="social-links">
                         <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/share/1CdrMkx4MQ/" class="social-link"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-tiktok"></i></a>
                         <a href="https://wa.me/923344148636" class="social-link whatsapp-link" target="_blank">
                             <i class="fab fa-whatsapp"></i>
                         </a>
